--- a/wordle-solver/index.html
+++ b/wordle-solver/index.html
@@ -1,16 +1,35 @@
 <html>
     <head>
         <style>
-            .wordle_solver_header {
-                text-align: center;
-                color: #000000;
-                font-size: 7vw;
-                padding-top: 2vw;
+            body {
+                margin: 0px;
+            }
+            .grid-container {
+                display: grid;
+                grid-template-rows: auto auto auto auto auto;
+                grid-template-columns: auto auto;
+                height: 100%;
+            }
+            .grid-item-input {
+                grid-column: 1 / 2;
+                grid-row: 1 / 5;
+            }
+            .grid-item-possible {
+                grid-column: 2 / 3;
+                grid-row: 1 / 5;
+            }
+            .grid-item-keyboard {
+                grid-column: 1 / 3;
+                grid-row: 5 / 6;
             }
         </style>
         <title>Bright Nebula Wordle Solver</title>
     </head>
     <body>
-        <h1 class="wordle_solver_header">Coming Soon!</h1>
+        <div class="grid-container">
+            <div class="grid-item-input" style="background-color: blue;"></div>
+            <div class="grid-item-possible" style="background-color: green;"></div>
+            <div class="grid-item-keyboard" style="background-color: red;"></div>
+        </div>
     </body>
 </html>
