capture onscreen key clicks and typed keys

--- a/wordle-solver/index.html
+++ b/wordle-solver/index.html
@@ -92,6 +92,22 @@
                 font-family: 'Times New Roman', Times, serif;
             }
         </style>
+        <script>
+            function onscreenKeyClicked() {
+                console.log(this.innerText);
+            }
+
+            window.onload = function() {
+                let keysForOnscreenKeyboard = document.getElementsByClassName('key');
+                for (currentKey of keysForOnscreenKeyboard) {
+                    currentKey.addEventListener("click", onscreenKeyClicked);
+                }
+            }
+
+            document.onkeydown = function(e) {
+                console.log(e);
+            }
+        </script>
         <title>Bright Nebula Wordle Solver</title>
     </head>
     <body>
